added EsLint for dev environment

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.141",
     "esbuild": "^0.23.0",
+    "eslint": "^9.7.0",
     "typescript": "^5.5.3"
   },
   "dependencies": {
